# sfml-window-demo

./: .gitignore  CMakeLists.txt  README.md
doc/: Reflection Angles.graffle
src/: Application.cpp  Application.hpp  Balls.cpp  Balls.hpp  Broadcaster.cpp  Broadcaster.hpp  FpsCounter.cpp  FpsCounter.hpp  Receiver.hpp  Shapes.cpp  Shapes.hpp  Window.cpp  Window.hpp  main.cpp
